--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <header class="header">
     <div class="header__menu">
-      <img src="/img/logo.png" alt="Korotoshop" class="header__menu__logo">
+      <img src="img/logo.png" alt="Korotoshop" class="header__menu__logo">
       <div class="header__menu__hamburger">
         <span class="header__menu__hamburger-icon">&nbsp;</span>
       </div>
