arrow animation & step one

--- a/index.html
+++ b/index.html
@@ -26,21 +26,58 @@
         <span class="header__menu__hamburger-icon">&nbsp;</span>
       </div>
     </div>
-    <span class="header__contaier">
+    <d class="header__contaier">
       <h1 class="header__contaier__mainTitle">Korotoshop</h1>
       <h2 class="header__contaier__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatem, nobis rem illo facilis blanditiis corrupti quidem aperiam eligendi ullam dolores nisi autem in, vitae eveniet tenetur optio sequi commodi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error expedita sequi vitae, veritatis reiciendis recusandae. Adipisci sint minus architecto, ut animi labore excepturi molestiae in libero voluptatem quaerat sed laborum.</h2>
-      <span class="header__contaier__discover">
-        Discover
-        <span class="header__contaier__discover-arrow">
-          &nbsp;
-        </span>
-      </span>
+      <a id="smoothScroll" class="header__contaier__scroll" href="#howToBuy">
+        <div class="header__contaier__discover">
+          Discover
+          <div class="header__contaier__discover__arrow header__contaier__discover__arrow-first"></div>
+          <div class="header__contaier__discover__arrow header__contaier__discover__arrow-second"></div>
+        </div>
+      </a>
     </div>
   </header>
-  <section id="howToBUy">
-    <div class="x"></div>
+  <section id="howToBuy">
+    <div class="container">
+      <div class="title-buy">how to <strong>Buy</strong>?</div>
+      <div class="steps">
+        <div class="steps__one">
+          <img class="steps__one__arrow" src="img/arrow.svg" alt="">
+          <div class="steps__one__title stepsTitle">1.Find</div>
+            <div class="steps__one__social-flex">
+              <img class="steps__one__glass steps__one__social" src="img/glass.svg" alt="">
+              <img class="steps__one__facebook steps__one__social" src="img/facebook.svg" alt="">
+              <img class="steps__one__twitter steps__one__social" src="img/twitter.svg" alt="">
+              <img class="steps__one__instagram steps__one__social" src="img/instagram.svg" alt="">
+            </div>
+        </div>
+        <div class="steps__two">
+          <div class="stepsTitle">2.Contact</div>
+        </div>
+        <div class="steps__three">
+          <div class="stepsTitle">3.Pay</div>
+        </div>
+        <div class="steps__four">
+          <div class="stepsTitle">4.Delivery</div>
+        </div>
+      </div>
+    </div>
   </section>
+  <section id="whatWeSell">
 
+  </section>
+  <section id="wantToWorkWithUs">
+
+  </section>
+  <section id="subscribe">
+
+  </section>
+  <footer id="footer">
+
+  </footer>
+
+<script src="main.js"></script>
 </body>
 
 </html>
